--- a/src/app/public/login/login.html
+++ b/src/app/public/login/login.html
@@ -2,7 +2,7 @@
   *ngVar="formState$ | async as formState"
   [ngrxFormState]="formState"
   (submit)="onSubmit()"
-  class="table">
+  class="table login-page">
   <div class="table">
     <div class="spacer2"></div>
     <form-text
