--- a/src/app/public/public.scss
+++ b/src/app/public/public.scss
@@ -1,1 +1,4 @@
-:host .public {}
+:host .public {
+  .login-content {padding: 2rem 4rem;}
+  .contentwrapper {display: flex; flex-direction: column; justify-content: center; height: 100%;}
+}
