#9: Change password page

--- a/src/app/public/login/login.html
+++ b/src/app/public/login/login.html
@@ -9,16 +9,14 @@
       [controlState]="formState.controls.username"
       [label]="'PUBLIC.LOGIN.TEXT_USERNAME' | translate"
       autocomplete="username"
-      dataTestID="username-input"
-      >
+      dataTestID="username-input">
     </form-text>
     <form-password
       [controlState]="formState.controls.password"
       [label]="'PUBLIC.LOGIN.TEXT_PASSWORD' | translate"
       autocomplete="current-password"
       dataTestID="password-input"
-      role="textbox"
-      >
+      role="textbox">
     </form-password>
     <div class="spacer2"></div>
     <div class="tabular-row spacer">
