--- a/src/app/account/users/users.scss
+++ b/src/app/account/users/users.scss
@@ -1,1 +1,5 @@
-:host .users-page {}
+:host .users-page {
+  ::ng-deep .ag-root-wrapper .bttn-set .bttn {
+    line-height: 1.9rem; margin-top: 0.6rem;
+  }
+}
