--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,6 @@
+@import "../node_modules/ag-grid-community/dist/styles/ag-grid.css";
+@import "../node_modules/ag-grid-community/dist/styles/ag-theme-alpine.css";
+
 @font-face {
   font-family: 'Work Sans';
   font-weight: 100;
@@ -348,8 +351,10 @@ select {
 .bttn, .pagination {height: 2.6rem; box-shadow: 0 0.3rem 0 rgba(0, 0, 0, 0.05);
     transition: all 0.3s;
 }
-.bttn-set, .pagination {flex-wrap: wrap;}
-.line-wrapper, .search-module .element-item, .bttn-set, .pagination {display: flex; align-items: center;}
+.bttn-set {flex-wrap: wrap; display: flex; align-items: center;
+  .bttn:not(:first-child) {border-left: 1px solid rgba(49, 96, 129, 0.25); margin-left: 0;}
+}
+.line-wrapper, .search-module .element-item, .pagination {display: flex; align-items: center;}
 
 
 .dropdown {
@@ -457,47 +462,6 @@ button.normal {
 .max-width {
   width: 100%;
 }
-.navbar-secondary {
-  display: flex;
-  background-color: #316081;
-  align-items: center;
-  justify-content: space-between;
-  background-color: #9caebf;
-  height: 4.2rem;
-  padding: 0 1.3rem;
-  section {
-    display: flex;
-    .dropdown {
-      margin-left: 1.4rem;
-    }
-    .genepanel {
-      margin-left: 1.4rem;
-    }
-    .analysis {
-      margin-left: 1.4rem;
-    }
-  }
-  .bttn-set {
-    label.bttn {
-      background-color: rgba(255, 255, 255, 0.75);
-      color: rgba(0, 0, 0, 0.75);
-    }
-    label.bttn.active {
-      background-color: rgba(49, 96, 129, 0.75);
-      color: white;
-    }
-  }
-  .pagination {
-    label.bttn {
-      background-color: rgba(255, 255, 255, 0.75);
-      color: rgba(0, 0, 0, 0.75);
-    }
-    label.bttn.active {
-      background-color: rgba(49, 96, 129, 0.75);
-      color: white;
-    }
-  }
-}
 .navbar-bottom {
   flex-direction: column;
   z-index: 100;
@@ -524,12 +488,7 @@ button.normal {
       margin-left: 1.4rem;
     }
   }
-  article {
-    display: flex;
-    width: 100%;
-    justify-content: space-between;
-    height: 2.7rem;
-  }
+  article {display: flex; width: 100%; justify-content: space-between; height: 2.7rem;}
 }
 .overview-filter {
   display: flex;
@@ -678,13 +637,25 @@ button.normal {
 .spacer, .spacer-horizontal {height: 4rem;}
 .spacer2 {height: 2rem;}
 
-@media only screen and (min-width: 1800px) {
-  html {
-    font-size: 11px;
+.mat-dialog-container {background-color: #eceef3; color: #000; padding: 16px 16px 0; overflow: initial; position: relative;
+  .modal {width: 238px; text-align: center;
+    &-title {font-family: "Work Sans", sans-serif; font-size: 1.2rem; line-height: 20px;
+      text-transform: none; margin-bottom: 0.86rem;
+    }
+    &-content {line-height: 16px; padding: 0; margin: 0 0 10px;}
+    &-actions {padding: 0; min-height: auto; margin-bottom: 0;}
+    .bttn-set {justify-content: center; width: 100%;
+      .bttn {min-width: 70px;}
+    }
   }
+}
+
+@media only screen and (min-width: 1800px) {
+  html {font-size: 11px;}
 }
 @media only screen and (max-width: 1080px) {
-  html {
-    font-size: 8px;
-  }
+  html {font-size: 8px;}
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
