--- a/src/app/account/shared/modal-confirmation/modal-confirmation.html
+++ b/src/app/account/shared/modal-confirmation/modal-confirmation.html
@@ -1,6 +1,15 @@
 <div class="modal modal-confirmation">
   <h3 mat-dialog-title class="modal-title">
-    {{ data.title | translate }}
+    <div class="modal-title-container">
+      <div mat-dialog-close class="icon modal-close">
+        <svg id="i-close" viewBox="0 0 32 32" width="32" height="32" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="6.25%">
+          <path d="M2 30 L30 2 M30 30 L2 2"></path>
+        </svg>
+      </div>
+    </div>
+    <div class="modal-title-text">
+      {{ data.title | translate }}
+    </div>
   </h3>
   <div mat-dialog-actions class="modal-actions">
     <div class="bttn-set">
