--- a/src/app/account/shared/navbar-secondary/navbar-secondary.html
+++ b/src/app/account/shared/navbar-secondary/navbar-secondary.html
@@ -2,10 +2,15 @@
   <div class="navbar-secondary">
     <div class="workflow-options">
       <div class="bttn-set">
-        <a routerLink="/users" routerLinkActive="active" class="bttn">Users</a>
-        <a routerLink="/" class="bttn">Genpanels</a>
-        <a routerLink="/" class="bttn">Something</a><!-- end ngRepeat: c in $ctrl.componentKeys -->
+        <a routerLink="/users" routerLinkActive="active" class="bttn">{{ 'ACCOUNT.NAVBAR.LINK_USERS' | translate }}</a>
+        <a routerLink="/user-groups" routerLinkActive="active" class="bttn">{{ 'ACCOUNT.NAVBAR.LINK_USER_GROUPS' | translate }}</a>
+        <a routerLink="/" class="bttn">{{ 'ACCOUNT.NAVBAR.LINK_SOMETHING' | translate }}</a>
       </div>
     </div>
+    <section>
+      <button (click)="openNewUserModal()" class="bttn green">
+        {{ 'ACCOUNT.NAVBAR.BUTTON_NEW_USER' | translate }}
+      </button>
+    </section>
   </div>
 </div>
