--- a/src/styles.scss
+++ b/src/styles.scss
@@ -335,6 +335,7 @@ select {
   &-disabled {pointer-events: none; background-color: rgba(49, 96, 129, 0.05); color:  rgba(0, 0, 0, 0.25);
     border: 1px solid rgba(49, 96, 129, 0.05);
   }
+  &.green {background-color: rgba(49, 129, 123, 0.5) !important; color: white !important;}
 }
 .pagination {
   li {font-family: "Work Sans", sans-serif; font-size: 1.2rem; font-weight: 500; letter-spacing: 0.1rem;
@@ -637,10 +638,18 @@ button.normal {
 .spacer, .spacer-horizontal {height: 4rem;}
 .spacer2 {height: 2rem;}
 
-.mat-dialog-container {background-color: #eceef3; color: #000; padding: 16px 16px 0; overflow: initial; position: relative;
+.mat-dialog-container {background-color: #f5f9f8; color: #000; padding: 0 24px 24px!important; overflow: initial; position: relative;
   .modal {width: 238px; text-align: center;
-    &-title {font-family: "Work Sans", sans-serif; font-size: 1.2rem; line-height: 20px;
-      text-transform: none; margin-bottom: 0.86rem;
+    &-title {font-family: "Work Sans", sans-serif; font-size: 1.2rem; line-height: 20px; 
+      display: flex; height: 3.8rem; min-height: 3.8rem; text-transform: none; margin: 0 -24px 2.9rem;
+      background-color: rgba(49, 129, 123, 0.25);
+      &-container {display: flex; cursor: pointer; width: 20px; padding-right: 3rem; padding-left: 1.5rem;
+        .icon {transition: all 0.3s; width: 1.2rem; margin-right: 1rem; margin-top: 0.2rem; line-height: 3.8rem;}
+        svg {width: 1.2rem; height: 1.2rem; transition: all 0.3s; transform: rotate(90deg); transform-origin: center;}
+      }
+      &-text {font-family: "Source Sans Pro", sans-serif; line-height: 3.8rem; font-weight: 600; letter-spacing: 0.1rem;
+        font-size: 1.3rem; text-transform: uppercase; white-space: nowrap; color: rgba(0, 0, 0, 0.5);
+      }
     }
     &-content {line-height: 16px; padding: 0; margin: 0 0 10px;}
     &-actions {padding: 0; min-height: auto; margin-bottom: 0;}
