--- a/src/app/shared/form-text/form-text.html
+++ b/src/app/shared/form-text/form-text.html
@@ -13,4 +13,9 @@
       'form-control-error': controlState.isSubmitted && controlState.isInvalid
     }"
     class="cell">
+    <validation-errors
+      *ngIf="controlState.isSubmitted && controlState.isInvalid"
+      [controlErrors]="controlState.errors"
+      [messages]="validationMessages">
+    </validation-errors>
 </div>
