#9: Allow to edit/add users, changing roles

--- a/src/app/account/users/shared/components/modal-details/modal-details.html
+++ b/src/app/account/users/shared/components/modal-details/modal-details.html
@@ -12,7 +12,9 @@
       </div>
     </div>
     <div class="modal-title-text">
-      {{ 'ACCOUNT.USERS.MODAL_DETAILS.TITLE_EDIT' | translate }}
+      {{ ((isNewUser)
+          ? 'ACCOUNT.USERS.MODAL_DETAILS.TITLE_NEW'
+          : 'ACCOUNT.USERS.MODAL_DETAILS.TITLE_EDIT') | translate }}
     </div>
   </h3>
   <div class="modal-content" mat-dialog-content>
@@ -37,6 +39,13 @@
         }">
       </form-text>
       <form-text
+        [controlState]="formState.controls.username"
+        label="{{ 'ACCOUNT.USERS.MODAL_DETAILS.TEXT_USERNAME' | translate }}"
+        [validationMessages]="{
+          required: 'ACCOUNT.USERS.MODAL_DETAILS.ERRORS.TEXT_USERNAME_IS_REQUIRED' | translate
+        }">
+      </form-text>
+      <form-text
         [controlState]="formState.controls.email"
         label="{{ 'ACCOUNT.USERS.MODAL_DETAILS.TEXT_EMAIL' | translate }}"
         [validationMessages]="{
@@ -44,6 +53,19 @@
           email: 'ACCOUNT.USERS.MODAL_DETAILS.ERRORS.TEXT_EMAIL_IS_INVALID' | translate
         }">
       </form-text>
+      <custom-select
+        [controlState]="formState.controls.authGroup"
+        [isRequired]="true"
+        [options]="authGroupOptions"
+        label="{{ 'ACCOUNT.USERS.MODAL_DETAILS.TEXT_AUTH_GROUP' | translate }}">
+      </custom-select>
+      <!--<div class="tabular-row spacer">
+        <h3 class="full-title upper cell"><i>{{ 'ACCOUNT.USERS.MODAL_DETAILS.TEXT_EMAIL' | translate }}</i></h3>
+        <select [ngrxFormControlState]="formState.controls.authGroup" class="cell">
+          <option value="USD">USD</option>
+          <option value="EUR">EUR</option>
+        </select>
+      </div>-->
       <div class="bttn-set">
         <button
           [ngClass]="{
