#13: User groups page

--- a/src/app/account/user-groups/user-groups.scss
+++ b/src/app/account/user-groups/user-groups.scss
@@ -1,1 +1,5 @@
-:host .user-groups-page {}
+:host .user-groups-page {
+  ::ng-deep .ag-root-wrapper .bttn-set .bttn {
+    line-height: 1.9rem; margin-top: 0.6rem;
+  }
+}
