--- a/src/app/account/user-groups/user-groups.html
+++ b/src/app/account/user-groups/user-groups.html
@@ -5,6 +5,7 @@
       [columnDefs]="columnDefs"
       [frameworkComponents]="frameworkComponents"
       [pagination]="true"
+      [paginationPageSize]="10"
       style="width: 100%; height: 550px;"
       class="ag-theme-alpine"
   >
