--- a/src/app/account/user-groups/shared/components/actions-cell-renderer/actions-cell-renderer.html
+++ b/src/app/account/user-groups/shared/components/actions-cell-renderer/actions-cell-renderer.html
@@ -1,8 +1,8 @@
 <div class="bttn-set">
   <a (click)="openEditModal()" class="bttn">
-    {{ 'ACCOUNT.USER_GROUPS.ACTIONS.TEXT_EDIT' | translate }}
+    <i class="fa fa-edit"></i>
   </a>
   <a *ngIf="isAdmin$ | async" (click)="openDeleteModal()" class="bttn">
-    {{ 'ACCOUNT.USER_GROUPS.ACTIONS.TEXT_DELETE' | translate }}
+    <i class="fa fa-trash"></i>
   </a>
 </div>
