--- a/src/app/account/users/shared/components/actions-cell-renderer/actions-cell-renderer.html
+++ b/src/app/account/users/shared/components/actions-cell-renderer/actions-cell-renderer.html
@@ -1,11 +1,11 @@
 <div *ngVar="isAdmin$ | async as isAdmin" class="bttn-set">
   <a (click)="openEditModal()" class="bttn">
-    {{ 'ACCOUNT.USERS.ACTIONS.TEXT_EDIT' | translate }}
+    <i class="fa fa-edit"></i>
   </a>
-  <a *ngIf="isAdmin" (click)="openResetModal()" class="bttn">
-    {{ 'ACCOUNT.USERS.ACTIONS.TEXT_RESET' | translate }}
+  <a *ngIf="isAdmin" (click)="openChangePasswordModal()" class="bttn">
+    <i class="fa fa-key"></i>
   </a>
   <a *ngIf="isAdmin" (click)="openDeleteModal()" class="bttn">
-    {{ 'ACCOUNT.USERS.ACTIONS.TEXT_DELETE' | translate }}
+    <i class="fa fa-trash"></i>
   </a>
 </div>
