--- a/src/styles.scss
+++ b/src/styles.scss
@@ -620,7 +620,9 @@ button.normal {
 
 .white {color: rgba(255, 255, 255, 0.75);}
 .table, .cb-table {display: table;
-  .cell {display: table-cell; white-space: nowrap;}
+  .cell {display: table-cell; white-space: nowrap;
+    &.full-title {padding-top: 7px; vertical-align: top;}
+  }
 }
 .tabular-row {display: table-row;}
 .spacer, .spacer-horizontal {height: 4rem;}
