#-: Fix token refresh issue

--- a/src/app/account/profile/profile.html
+++ b/src/app/account/profile/profile.html
@@ -1,4 +1,7 @@
-Profile
-
-
-<button (click)="logout()">Logout</button>
+<div class="profile-page">
+  <div class="bttn-set">
+    <button (click)="logout()" class="bttn">
+      {{ 'ACCOUNT.PROFILE.BUTTON_LOGOUT' | translate }}
+    </button>
+  </div>
+</div>
