--- a/src/app/account/users/shared/components/modal-password/modal-password.html
+++ b/src/app/account/users/shared/components/modal-password/modal-password.html
@@ -23,7 +23,7 @@
       role="form"
       class="table">
       <form-password
-        [controlState]="formState.controls.password"
+        [controlState]="formState.controls.newPassword"
         label="{{ 'ACCOUNT.USERS.MODAL_PASSWORD.TEXT_PASSWORD' | translate }}"
         [validationMessages]="{
           required: 'ACCOUNT.USERS.MODAL_PASSWORD.ERRORS.TEXT_PASSWORD_IS_REQUIRED' | translate
