--- a/src/app/account/users/shared/components/modal-details/modal-details.html
+++ b/src/app/account/users/shared/components/modal-details/modal-details.html
@@ -62,7 +62,7 @@
       <custom-select
         [controlState]="formState.controls.groupID"
         [isRequired]="true"
-        [options]="authGroupOptions"
+        [options]="groupItems$ | async"
         label="{{ 'ACCOUNT.USERS.MODAL_DETAILS.TEXT_GROUP' | translate }}">
       </custom-select>
       <div class="bttn-set">
