--- a/src/app/shared/navbar/navbar.html
+++ b/src/app/shared/navbar/navbar.html
@@ -14,8 +14,10 @@
       <section>
         <div class="right">
           <div class="link">
-            <a href="/docs" target="_blank">
-              <h3 class="full-title upper clickable white"><i>Documentation</i></h3>
+            <a href="/" target="_blank">
+              <h3 class="full-title upper clickable white">
+                <i>{{ 'ACCOUNT.NAVBAR.LINK_LOGIN_AS_USER' | translate }}</i>
+              </h3>
             </a>
           </div>
           <div *ngIf="isAuthenticated$ | async" class="link">
