--- a/src/app/account/users/shared/components/actions-cell-renderer/actions-cell-renderer.html
+++ b/src/app/account/users/shared/components/actions-cell-renderer/actions-cell-renderer.html
@@ -1,11 +1,11 @@
 <div *ngVar="isAdmin$ | async as isAdmin" class="bttn-set">
   <a (click)="openEditModal()" class="bttn">
-    <i class="fa fa-edit"></i>
+    <i class="material-icons">edit</i>
   </a>
   <a *ngIf="isAdmin" (click)="openChangePasswordModal()" class="bttn">
-    <i class="fa fa-key"></i>
+    <i class="material-icons">vpn_key</i>
   </a>
   <a *ngIf="isAdmin" (click)="openDeleteModal()" class="bttn">
-    <i class="fa fa-trash"></i>
+    <i class="material-icons">delete</i>
   </a>
 </div>
