--- a/src/styles.scss
+++ b/src/styles.scss
@@ -656,6 +656,8 @@ button.normal {
 /* ag-tables */
 .ag-theme-alpine {font-family: "Work Sans", sans-serif;}
 
+.material-icons {font-size: 16px;}
+
 @media only screen and (min-width: 1800px) {
   html {font-size: 11px;}
 }
