#-: Reset password page

--- a/src/app/public/public.html
+++ b/src/app/public/public.html
@@ -22,10 +22,10 @@
                 {{ 'PUBLIC.LAYOUT.TAB_LOGIN' | translate }}
               </a>
               <a
-                routerLink="/change-password"
+                routerLink="/forgot-password"
                 routerLinkActive="active"
                 class="bttn">
-                {{ 'PUBLIC.LAYOUT.TAB_CHANGE_PASSWORD' | translate }}
+                {{ 'PUBLIC.LAYOUT.TAB_FORGOT_PASSWORD' | translate }}
               </a>
             </div>
             <section class="line-wrapper">
