--- a/src/app/shared/navbar/navbar.html
+++ b/src/app/shared/navbar/navbar.html
@@ -14,7 +14,7 @@
       <section>
         <div class="right">
           <div class="link">
-            <a href="/" target="_blank">
+            <a (click)="loginIntoFrontend()" target="_blank">
               <h3 class="full-title upper clickable white">
                 <i>{{ 'ACCOUNT.NAVBAR.LINK_LOGIN_AS_USER' | translate }}</i>
               </h3>
