--- a/src/app/public/reset-password/reset-password.html
+++ b/src/app/public/reset-password/reset-password.html
@@ -5,12 +5,17 @@
   class="table login-page">
   <div class="table">
     <div class="spacer2"></div>
-    <form-text
-      [controlState]="formState.controls.email"
-      [label]="'PUBLIC.FORGOT_PASSWORD.TEXT_EMAIL' | translate"
-      autocomplete="email"
-      dataTestID="username-input">
-    </form-text>
+    <form-password
+      [controlState]="formState.controls.password"
+      [label]="'PUBLIC.RESET_PASSWORD.TEXT_PASSWORD' | translate"
+      dataTestID="password-input">
+    </form-password>
+    <form-password
+      [controlState]="formState.controls.repeatPassword"
+      [label]="'PUBLIC.RESET_PASSWORD.TEXT_REPEAT_PASSWORD' | translate"
+      dataTestID="repeat-password-input"
+      role="textbox">
+    </form-password>
     <div class="spacer2"></div>
     <div class="tabular-row spacer">
       <button
@@ -20,7 +25,7 @@
         }"
         type="submit"
         class="cell bttn">
-        {{ 'PUBLIC.FORGOT_PASSWORD.BUTTON_RESET_PASSWORD' | translate }}
+        {{ 'PUBLIC.RESET_PASSWORD.BUTTON_SET_PASSWORD' | translate }}
       </button>
     </div>
   </div>
