--- a/src/app/account/shared/navbar-secondary/navbar-secondary.html
+++ b/src/app/account/shared/navbar-secondary/navbar-secondary.html
@@ -4,7 +4,7 @@
       <div class="bttn-set">
         <a routerLink="/users" routerLinkActive="active" class="bttn">{{ 'ACCOUNT.NAVBAR.LINK_USERS' | translate }}</a>
         <a routerLink="/user-groups" routerLinkActive="active" class="bttn">{{ 'ACCOUNT.NAVBAR.LINK_USER_GROUPS' | translate }}</a>
-        <!--<a routerLink="/" class="bttn">{{ 'ACCOUNT.NAVBAR.LINK_SOMETHING' | translate }}</a>-->
+        <a routerLink="/gen-panels" routerLinkActive="active" class="bttn">{{ 'ACCOUNT.NAVBAR.LINK_GEN_PANELS' | translate }}</a>
       </div>
     </div>
     <section>
