#19: Gen panle assignment

--- a/src/app/account/gen-panels/gen-panels.html
+++ b/src/app/account/gen-panels/gen-panels.html
@@ -1,4 +1,4 @@
-<div class="user-groups-page">
+<div class="gen-panels-page">
   <ag-grid-angular
       (gridReady)="onGridReady($event)"
       [rowData]="items$ | async"
