--- a/src/app/account/gen-panels/gen-panels.scss
+++ b/src/app/account/gen-panels/gen-panels.scss
@@ -1,1 +1,6 @@
-:host .gen-panels-page {}
+:host .gen-panels-page {
+  ::ng-deep .ag-root-wrapper .bttn-set .bttn {
+    line-height: 1.9rem; margin-top: 0.6rem;
+    &:not(:last-child) {margin-right: 0.6rem;}
+  }
+}
