--- a/src/app/shared/custom-multiselect/custom-multiselect.scss
+++ b/src/app/shared/custom-multiselect/custom-multiselect.scss
@@ -25,10 +25,53 @@
   }
   &.disabled {pointer-events: none;}
 }
-:host .custom-multiselect {max-width: 182px;
+:host .custom-multiselect {height: 36px;
+  &.dropdown-hastags {max-width: 300px; white-space: normal; min-height: 36px; height: auto;}
+  .dropdown-trigger {border-bottom: 1px solid #b8bbba; height: 2.6rem;
+    font-size: 1.2rem; padding: 5px 0.3rem 8px; width: 100%; display: inline-block; box-sizing: border-box; color: #000;
+    &-placeholder {opacity: 0.65;}
+    .icon {position: absolute; top: 0; right: 0; margin: 10px; transition: all 0.3s;}
+  }
+  .dropdown-content {width: 100%; top: 100%; border-top: none; border-radius: 0 0 3px 3px; max-height: 69px; overflow-y: auto;}
+  &.dropdown-open {
+    .dropdown-trigger {
+      :after {top: -6px;}
+      .icon {transform: rotateX(180deg);}
+    }
+    .dropdown-content {margin-top: -1px; border-radius: 0; top: 75%; border: 1px solid #bfc2c1; border-top: none;}
+  }
+  .dropdown-item {padding-left: 24px;
+    &.not-found {padding: 8px; text-align: center; pointer-events: none;
+      &:hover {background: #f5f9f8;}
+    }
+  }
+  .checkbox {padding: 0;
+    input {position: absolute; width: inherit; padding: 0.3rem; height: 2.6rem;}
+    &-icon {top: 9px; left: 8px; background-color: #C4CDD4; border-color: transparent; pointer-events: none;}
+  }
+  .dropdown-tags {position: relative; top: 4px; left: 4px; right: 4px; height: 28px; font-size: 0.85rem;
+    pointer-events: none; overflow: hidden; max-width: 100%; margin-right: 40px;
+    .dropdown-tag {position: relative; display: inline-block; padding: 6px 8px; height: 20px; margin-right: 3px; background-color: #E2E6E9;
+      border-radius: 3px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; padding-right: 18px; max-width: 100%; margin-bottom: 3px;
+      &-action {position: absolute; top: 3px; right: 7px; margin: 0; width: 10px; height: 10px; pointer-events: auto;
+        &:hover {background-color: #6C8393; text-decoration: none; border: 0;}
+      }
+    }
+    &-reset {position: absolute; top: 10px; right: 26px;
+      .icon {background-color: #C4CDD4; transform: scale(0.8);
+        &:hover {background-color: #6C8393;}
+      }
+    }
+    &-count {position: absolute; right: 44px; top: 10px; font-size: 0.85rem; pointer-events: none;}
+    &-hashidden {margin-right: 20px; min-height: 28px; height: auto;}
+  }
+}
+/*:host .custom-multiselect {max-width: 182px;
   &.dropdown-hastags {max-width: 300px; width: 100%;}
-  .dropdown-trigger {transition: none;
-    &-selected {padding: 4px 40px 4px 4px;}
+  .dropdown-trigger {border-bottom: 1px solid #b8bbba; height: 2.6rem;
+    font-size: 1.2rem; padding: 5px 0.3rem 8px; width: 100%; display: inline-block; box-sizing: border-box; color: #000;
+    &-placeholder {opacity: 0.65;}
+    .icon {position: absolute; top: 0; right: 0; margin: 10px; transition: all 0.3s;}
   }
   .dropdown-items {
     .dropdown-item {height: 34px; padding-left: 32px; line-height: 18px;
@@ -38,6 +81,7 @@
       &.not-found {padding: 8px;}
     }
     .checkbox {padding: 0;
+      input {position: absolute; width: inherit;}
       &-icon {top: 9px; left: 8px; background-color: #C4CDD4; border-color: transparent; pointer-events: none;}
     }
   }
@@ -58,4 +102,4 @@
     &-count {position: absolute; right: 44px; top: 10px; font-size: 0.85rem; pointer-events: none;}
     &-hashidden {margin-right: 68px;}
   }
-}
+}*/
