--- a/src/app/account/analyses/analyses.html
+++ b/src/app/account/analyses/analyses.html
@@ -1,4 +1,4 @@
-<div class="gene-panels-page">
+<div class="analyses-page">
   <ag-grid-angular
       (gridReady)="onGridReady($event)"
       [rowData]="items$ | async"
