--- a/src/app/account/analyses/shared/components/actions-cell-renderer/actions-cell-renderer.html
+++ b/src/app/account/analyses/shared/components/actions-cell-renderer/actions-cell-renderer.html
@@ -1,1 +1,5 @@
-ActionsCellRenderer
+<div class="bttn-set">
+  <a [routerLink]="['report', params.data.id]" class="bttn">
+    <i class="material-icons">wysiwyg</i>
+  </a>
+</div>
